# Search-Engine-Guy

./: README.md  autoinstall.sh  documents.json  extractText.py  generateEmbeddings.py  ingest.py  pyproject.toml  search.py  search_index_chunks.json  search_index_embeddings.npy  split.py  summaryModel  ui.py
Onenote-Scraper/: dependencies.txt  grabber.py  grapper.py  mousetest.py
ai_guy/: generateEmbeddings.py  ingest.py  search.py  summaryModelBig  summaryModelMedium
ai_guy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
allthestuff/: app.py  autoinstall.sh  extractText.py  generateEmbeddings.py  ingest.py  search.py  search.py.old  split.py  summaryModelMedium  summaryModelSmall
allthestuff/static/: index.html
